--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -9,6 +9,7 @@ kv_namespaces = [
 
 [vars]
 WORKERS_RS_VERSION = "0.0.9"
+ACCESS_KEY = ""
 
 [build]
 command = "cargo install -q worker-build --version ^0.0.8 && worker-build --release" # required
